[package]
name = "jwt_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { git = "https://github.com/WasmEdge/hyper.git", branch = "wasmedge", features = [
    "full",
] }
tokio = { git = "https://github.com/WasmEdge/tokio.git", branch = "wasmedge", features = [
    "rt",
    "macros",
    "net",
    "time",
] }
hmac = { version = "0.12", features = ["reset"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

jwt-simple = "0.11"
jwt = "0.16"
